refactor: update Makefile and refine Fandango documentation/notebooks

--- a/doc/02_refinement.ipynb
+++ b/doc/02_refinement.ipynb
@@ -44,10 +44,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fandangoLearner.interface.fandango import parse_file\n",
+    "from fdlearn.interface.fandango import parse_file\n",
+    "from fdlearn.data import FandangoInput\n",
     "\n",
     "from fandango.language.parse import Grammar\n",
-    "from fandangoLearner.data.input import FandangoInput\n",
     "\n",
     "grammar_file = \"calculator.fan\"\n",
     "grammar, _ = parse_file(grammar_file)\n",
@@ -96,13 +96,14 @@
      "text": [
       "fandango-learner:INFO: Instantiated patterns: 18\n",
       "fandango-learner:INFO: Filtered positive inputs for learning: 2\n",
-      "fandango-learner:INFO: Found 12 valid conjunctions\n"
+      "fandango-learner:INFO: Evaluating 116 candidates\n",
+      "fandango-learner:INFO: Found 6 valid conjunctions\n"
      ]
     }
    ],
    "source": [
-    "from fandangoLearner.learner import FandangoLearner\n",
-    "from fandangoLearner.learner import NonTerminal\n",
+    "from fdlearn.learner import FandangoLearner\n",
+    "from fdlearn.learner import NonTerminal\n",
     "relevant_non_terminals = {\n",
     "    NonTerminal(\"<number>\"),\n",
     "    NonTerminal(\"<maybeminus>\"),\n",
@@ -174,7 +175,7 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "from debugging_framework.input.oracle import OracleResult\n",
+    "from fdlearn.data import OracleResult\n",
     "\n",
     "def calculator_oracle(inp: str) -> OracleResult:\n",
     "    try:\n",
@@ -221,7 +222,7 @@
     "more_inputs = set(initial_inputs)\n",
     "for candidate in learner.get_best_candidates():\n",
     "    print(candidate)\n",
-    "    fandango = Fandango(grammar, [candidate.constraint], desired_solutions=10)\n",
+    "    fandango = Fandango(grammar, [candidate.constraint], desired_solutions=10, random_seed=0)\n",
     "    solutions = fandango.evolve()\n",
     "    for tree in solutions:\n",
     "        more_inputs.add(FandangoInput(tree, calculator_oracle(str(tree))))\n",
@@ -253,22 +254,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sqrt(-10) True\n",
-      "cos(10) False\n",
-      "sqrt(-608) True\n",
-      "sqrt(-10040) True\n",
-      "sqrt(-220475) True\n",
-      "sqrt(-1080) True\n",
-      "sqrt(0) False\n",
-      "sqrt(-21002) True\n",
-      "sqrt(2) False\n",
-      "sqrt(-80) True\n",
-      "sqrt(-900) True\n",
-      "sqrt(-900290) True\n",
-      "sqrt(-42005) True\n",
-      "sqrt(-8000) True\n",
+      "sqrt(-410) True\n",
+      "sqrt(-216020) True\n",
+      "sqrt(-30) True\n",
+      "sqrt(-2000) True\n",
       "sin(-900) False\n",
-      "sqrt(-500511) True\n"
+      "sqrt(-9009) True\n",
+      "sqrt(-300000) True\n",
+      "sqrt(2) False\n",
+      "sqrt(-10) True\n",
+      "sqrt(-50) True\n",
+      "cos(10) False\n",
+      "sqrt(0) False\n",
+      "sqrt(-60) True\n",
+      "sqrt(-78602) True\n",
+      "sqrt(-900) True\n",
+      "sqrt(-800) True\n"
      ]
     }
    ],
@@ -302,6 +303,7 @@
      "text": [
       "fandango-learner:INFO: Instantiated patterns: 18\n",
       "fandango-learner:INFO: Filtered positive inputs for learning: 5\n",
+      "fandango-learner:INFO: Evaluating 140 candidates\n",
       "fandango-learner:INFO: Found 16 valid conjunctions\n"
      ]
     },
@@ -314,7 +316,7 @@
     }
    ],
    "source": [
-    "from fandangoLearner.learner import NonTerminal\n",
+    "from fdlearn.learner import NonTerminal\n",
     "relevant_non_terminals = {\n",
     "    NonTerminal(\"<number>\"),\n",
     "    NonTerminal(\"<maybeminus>\"),\n",
@@ -322,9 +324,9 @@
     "}\n",
     "\n",
     "learner = FandangoLearner(grammar)\n",
-    "learned_constraints = learner.learn_constraints(more_inputs, relevant_non_terminals=relevant_non_terminals)\n",
+    "learned_candidates = learner.learn_constraints(more_inputs, relevant_non_terminals=relevant_non_terminals)\n",
     "\n",
-    "for candidate in learner.get_best_candidates():\n",
+    "for candidate in learned_candidates:\n",
     "    print(candidate.constraint)"
    ]
   },
@@ -363,54 +365,21 @@
      "start_time": "2024-12-13T10:25:06.195435Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int(<number>) <= -10\n",
+      "str(<function>) == 'sqrt'\n"
+     ]
+    }
+   ],
    "source": [
-    "from fandango.constraints.base import *\n",
-    "from fandango.language.search import RuleSearch\n",
+    "constraints = learned_candidates[0].constraint.constraints\n",
     "\n",
-    "class NegationConstraint(Constraint):\n",
-    "    \"\"\"A simple constraint to represent logical negations.\"\"\"\n",
-    "    def __init__(self, inner_constraint: Constraint, *args, **kwargs):\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "        self.inner_constraint = inner_constraint\n",
-    "\n",
-    "    def transform(self, transformer: \"ConstraintTransformer\") -> \"Constraint\":\n",
-    "        # Apply the transformer to the inner constraint.\n",
-    "        normalized_inner = self.inner_constraint.transform(transformer)\n",
-    "        return NegationConstraint(normalized_inner)\n",
-    "\n",
-    "    def accept(self, visitor: \"ConstraintVisitor\"):\n",
-    "        #visitor.visit_expression_constraint(self)\n",
-    "        pass\n",
-    "\n",
-    "    def fitness(\n",
-    "            self, tree: DerivationTree, scope: Optional[Dict[NonTerminal, DerivationTree]] = None\n",
-    "    ) -> ConstraintFitness:\n",
-    "        \"\"\"\n",
-    "        Computes the fitness for the negation of the inner constraint.\n",
-    "\n",
-    "        Negation logic:\n",
-    "        - If the inner constraint is fully satisfied, this constraint is fully unsatisfied.\n",
-    "        - If the inner constraint is fully unsatisfied, this constraint is fully satisfied.\n",
-    "        - Otherwise, the fitness is calculated as the negation of the inner fitness.\n",
-    "        \"\"\"\n",
-    "        # Evaluate the fitness of the inner constraint\n",
-    "        inner_fitness = self.inner_constraint.fitness(tree, scope)\n",
-    "\n",
-    "        # Negate the fitness results\n",
-    "        solved = 1 - inner_fitness.solved\n",
-    "        total = inner_fitness.total\n",
-    "        success = not inner_fitness.success\n",
-    "\n",
-    "        return ConstraintFitness(\n",
-    "            solved=solved,\n",
-    "            total=total,\n",
-    "            success=success,\n",
-    "            # failing_trees=failing_trees,\n",
-    "        )\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        return f\"~({repr(self.inner_constraint)})\""
+    "for constraint in constraints:\n",
+    "    print(constraint)"
    ]
   },
   {
@@ -423,20 +392,40 @@
      "start_time": "2024-12-13T10:25:06.666654Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "~(int(<number>) <= -10)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from fandango.constraints.base import ConjunctionConstraint\n",
-    "from fandangoLearner.interface.fandango import parse_constraint\n",
+    "from fdlearn.interface.fandango import parse_constraint\n",
+    "from fdlearn.refinement.negation import NegationConstraint\n",
     "\n",
-    "new_const = parse_constraint(\"int(<number>) >= -10;\")\n",
-    "#negated_constraint = NegationConstraint(learned_constraints[0].constraint.constraints[0])\n",
-    "negated_constraint = NegationConstraint(new_const)\n",
-    "test_constraint = ConjunctionConstraint([negated_constraint, learned_constraints[0].constraint.constraints[1]])"
+    "negated_constraint = NegationConstraint(constraints[0])\n",
+    "negated_constraint"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "9aabf4c2-5a75-464d-a2ab-fe796ccd530e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fandango.constraints.base import ConjunctionConstraint\n",
+    "test_constraint = ConjunctionConstraint([negated_constraint, constraints[1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "cf76e66e016880f0",
    "metadata": {
     "ExecuteTime": {
@@ -448,10 +437,10 @@
     {
      "data": {
       "text/plain": [
-       "(~(int(<number>) >= -10) and str(<function>) == 'sqrt')"
+       "(~(int(<number>) <= -10) and str(<function>) == 'sqrt')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "129923a2450978fb",
    "metadata": {
     "ExecuteTime": {
@@ -472,13 +461,13 @@
    },
    "outputs": [],
    "source": [
-    "fandango = Fandango(grammar, [new_const], desired_solutions=100)\n",
+    "fandango = Fandango(grammar, [test_constraint], desired_solutions=100, random_seed=0)\n",
     "solutions = fandango.evolve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b90690c2b3f379b3",
    "metadata": {
     "ExecuteTime": {
@@ -486,7 +475,18 @@
      "start_time": "2024-12-13T10:28:07.681650Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sqrt(-5)\n",
+      "sqrt(-3)\n",
+      "sqrt(-8)\n",
+      "sqrt(-4)\n"
+     ]
+    }
+   ],
    "source": [
     "negated_inputs = {FandangoInput(tree, calculator_oracle(str(tree))) for tree in solutions}\n",
     "\n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "b28d689e660d166a",
    "metadata": {
     "ExecuteTime": {
@@ -512,14 +512,15 @@
      "text": [
       "fandango-learner:INFO: Instantiated patterns: 18\n",
       "fandango-learner:INFO: Filtered positive inputs for learning: 5\n",
-      "fandango-learner:INFO: Found 16 valid conjunctions\n"
+      "fandango-learner:INFO: Evaluating 146 candidates\n",
+      "fandango-learner:INFO: Found 8 valid conjunctions\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(int(<number>) <= -10 and str(<function>) == 'sqrt')\n"
+      "(int(<number>) <= -3 and str(<function>) == 'sqrt')\n"
      ]
     }
    ],
@@ -546,7 +547,7 @@
    "id": "a0a9715c-100b-4099-aa35-4df82f7c61a2",
    "metadata": {},
    "source": [
-    "Now the constraint might say something like `int(<number>) <= -4.0 and str(<function>) == 'sqrt'`. We’re getting closer to a simpler, more accurate constraint that captures the failing behavior: as soon as we try sqrt with any number less than -4, it fails.\n",
+    "Now the constraint might say something like `int(<number>) <= -3 and str(<function>) == 'sqrt'`. We’re getting closer to a simpler, more accurate constraint that captures the failing behavior: as soon as we try sqrt with any number less than -4, it fails.\n",
     "\n",
     "The refinement loop is about continually challenging and honing our understanding of what causes failures. By incrementally adding test inputs, flipping assumptions, and seeing which constraints still hold, we move from vague, overfitted rules toward constraints that truly represent the underlying pattern of failure.\n",
     "\n",
@@ -563,17 +564,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "67bda611-2917-4367-8c8a-46aab2a33dfe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fandangoLearner.refinement.core import FandangoRefinement,LoggerLevel"
+    "from fdlearn.refinement.core import FandangoRefinement,LoggerLevel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "56c35601-ceec-4e21-9867-088a9f6dc48a",
    "metadata": {},
    "outputs": [],
@@ -589,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "9e93e442-35e7-464f-b487-cc2d32aa4aaa",
    "metadata": {},
    "outputs": [],
@@ -599,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "502e25a0-2ca1-47ac-b99a-7beabde1deb1",
    "metadata": {},
    "outputs": [
@@ -618,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "ec3406ab-0917-4f37-99f2-5a9051e311d1",
    "metadata": {},
    "outputs": [],
@@ -628,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "7b2c77c4-baa1-4eee-91e7-e04a50b7d390",
    "metadata": {},
    "outputs": [
@@ -636,16 +637,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sqrt(-900205)\n",
-      "sqrt(-700071)\n",
-      "sqrt(-8)\n",
-      "sqrt(-20)\n",
-      "sqrt(-7)\n",
-      "sqrt(-21720)\n",
-      "sqrt(-900006)\n",
-      "sqrt(-300004)\n",
-      "sqrt(-12508)\n",
-      "sqrt(-900205)\n"
+      "sqrt(-2)\n",
+      "sqrt(-1980)\n",
+      "sqrt(-231)\n",
+      "sqrt(-6)\n",
+      "sqrt(-2)\n",
+      "sqrt(-1)\n",
+      "sqrt(-40660)\n",
+      "sqrt(-50)\n",
+      "sqrt(-10010)\n",
+      "sqrt(-6100)\n"
      ]
     }
    ],
@@ -655,13 +656,21 @@
     "for tree in solutions[:10]:\n",
     "    print(tree)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "677f540e-a57b-446d-9219-d7746e98800c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "fdlearn",
    "language": "python",
-   "name": "python3"
+   "name": "fdlearn"
   },
   "language_info": {
    "codemirror_mode": {
