--- a/doc/01_fandango-learner.ipynb
+++ b/doc/01_fandango-learner.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "from fandangoLearner.interface.fandango import parse_contents\n",
+    "from fdlearn.interface.fandango import parse_contents\n",
     "\n",
     "grammar = \"\"\"\n",
     "<start> ::= <arithexp>;\n",
@@ -106,7 +106,7 @@
    },
    "outputs": [],
    "source": [
-    "from fandangoLearner.learner import FandangoInput\n",
+    "from fdlearn.learner import FandangoInput\n",
     "\n",
     "initial_inputs = {\n",
     "  FandangoInput.from_str(grammar, inp, oracle)\n",
@@ -138,7 +138,7 @@
    },
    "outputs": [],
    "source": [
-    "from fandangoLearner.learner import NonTerminal\n",
+    "from fdlearn.learner import NonTerminal\n",
     "\n",
     "relevant_non_terminals = {\n",
     "    NonTerminal(\"<number>\"),\n",
@@ -174,12 +174,13 @@
      "text": [
       "fandango-learner:INFO: Instantiated patterns: 18\n",
       "fandango-learner:INFO: Filtered positive inputs for learning: 2\n",
-      "fandango-learner:INFO: Found 12 valid conjunctions\n"
+      "fandango-learner:INFO: Evaluating 116 candidates\n",
+      "fandango-learner:INFO: Found 6 valid conjunctions\n"
      ]
     }
    ],
    "source": [
-    "from fandangoLearner.learner import FandangoLearner\n",
+    "from fdlearn.learner import FandangoLearner\n",
     "\n",
     "learner = FandangoLearner(grammar)\n",
     "\n",
@@ -245,9 +246,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "fdlearn",
    "language": "python",
-   "name": "python3"
+   "name": "fdlearn"
   },
   "language_info": {
    "codemirror_mode": {
