--- a/doc/03_patterns.ipynb
+++ b/doc/03_patterns.ipynb
@@ -1,43 +1,47 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Patterns in FandangoLearn",
-   "id": "ea48a06c8a595277"
+   "id": "ea48a06c8a595277",
+   "metadata": {},
+   "source": [
+    "# Patterns in FandangoLearn"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "In this notebook, we show how you can add more patterns to FandangoLearn.",
-   "id": "ede71142286eb934"
+   "id": "ede71142286eb934",
+   "metadata": {},
+   "source": [
+    "In this notebook, we show how you can add more patterns to FandangoLearn."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "535b373334ec6505"
+   "id": "535b373334ec6505",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
