refine: enhance documentation on Fandango constraint refinement process

--- a/doc/02_refinement.ipynb
+++ b/doc/02_refinement.ipynb
@@ -39,10 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "46c6d8d2-d232-4698-bb42-ce9b9986ed2b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T09:43:12.595903Z",
+     "start_time": "2025-02-11T09:43:12.578727Z"
+    }
+   },
    "source": [
     "from fdlearn.interface.fandango import parse_file\n",
     "from fdlearn.data import FandangoInput\n",
@@ -69,7 +72,9 @@
     "    assert tree is not None, f\"Failed to parse {inp}\"\n",
     "\n",
     "initial_inputs = {FandangoInput.from_str(grammar, inp, oracle) for inp, oracle in initial_inputs}"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -81,14 +86,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "bf83d33301e091ad",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T09:59:04.600732Z",
-     "start_time": "2024-12-13T09:58:51.554486Z"
+     "end_time": "2025-02-11T09:43:13.418129Z",
+     "start_time": "2025-02-11T09:43:13.376675Z"
     }
    },
+   "source": [
+    "from fdlearn.learner import FandangoLearner\n",
+    "from fdlearn.learner import NonTerminal\n",
+    "relevant_non_terminals = {\n",
+    "    NonTerminal(\"<number>\"),\n",
+    "    NonTerminal(\"<maybeminus>\"),\n",
+    "    NonTerminal(\"<function>\"),\n",
+    "}\n",
+    "\n",
+    "learner = FandangoLearner(grammar)\n",
+    "learned_constraints = learner.learn_constraints(initial_inputs, relevant_non_terminals)"
+   ],
    "outputs": [
     {
      "name": "stderr",
@@ -101,18 +117,7 @@
      ]
     }
    ],
-   "source": [
-    "from fdlearn.learner import FandangoLearner\n",
-    "from fdlearn.learner import NonTerminal\n",
-    "relevant_non_terminals = {\n",
-    "    NonTerminal(\"<number>\"),\n",
-    "    NonTerminal(\"<maybeminus>\"),\n",
-    "    NonTerminal(\"<function>\"),\n",
-    "}\n",
-    "\n",
-    "learner = FandangoLearner(grammar)\n",
-    "learned_constraints = learner.learn_constraints(initial_inputs, relevant_non_terminals)"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -124,14 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "c06458df1b5a5f80",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T09:59:04.605958Z",
-     "start_time": "2024-12-13T09:59:04.601954Z"
+     "end_time": "2025-02-11T09:43:16.250266Z",
+     "start_time": "2025-02-11T09:43:16.247763Z"
     }
    },
+   "source": [
+    "for candidate in learner.get_best_candidates():\n",
+    "    print(candidate)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -141,10 +149,7 @@
      ]
     }
    ],
-   "source": [
-    "for candidate in learner.get_best_candidates():\n",
-    "    print(candidate)"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -164,15 +169,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "86c755aa0e2c31f3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T09:59:04.608774Z",
-     "start_time": "2024-12-13T09:59:04.606672Z"
+     "end_time": "2025-02-11T09:43:22.390015Z",
+     "start_time": "2025-02-11T09:43:22.386376Z"
     }
    },
-   "outputs": [],
    "source": [
     "import math\n",
     "from fdlearn.data import OracleResult\n",
@@ -186,7 +189,9 @@
     "        # If evaluation fails due to a domain error, we say it FAILS.\n",
     "        return OracleResult.FAILING\n",
     "    return OracleResult.PASSING"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -198,23 +203,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "525cce8be90711c6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T09:59:04.807374Z",
-     "start_time": "2024-12-13T09:59:04.610150Z"
+     "end_time": "2025-02-11T09:43:24.281339Z",
+     "start_time": "2025-02-11T09:43:24.248676Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(int(<number>) <= -10 and str(<function>) == 'sqrt'), Precision: 1.0, Recall: 1.0 (based on 2 failing and 4 passing inputs)\n"
-     ]
-    }
-   ],
    "source": [
     "from fandango.evolution.algorithm import Fandango\n",
     "from fandango.language.tree import DerivationTree\n",
@@ -229,7 +224,17 @@
     "\n",
     "assert all(inp.oracle is not None for inp in more_inputs)\n",
     "assert all(isinstance(inp.tree, DerivationTree) for inp in more_inputs)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(int(<number>) <= -10 and str(<function>) == 'sqrt'), Precision: 1.0, Recall: 1.0 (based on 2 failing and 4 passing inputs)\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -241,42 +246,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "c01df9e9e8035a82",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-13T09:59:04.810506Z",
-     "start_time": "2024-12-13T09:59:04.808050Z"
+     "end_time": "2025-02-11T09:43:33.246927Z",
+     "start_time": "2025-02-11T09:43:33.242966Z"
     }
    },
+   "source": [
+    "for inp in more_inputs:\n",
+    "    print(inp.tree, candidate.constraint.check(inp))"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sqrt(-410) True\n",
+      "sqrt(-300000) True\n",
+      "sqrt(0) False\n",
       "sqrt(-216020) True\n",
+      "cos(10) False\n",
+      "sqrt(-60) True\n",
+      "sin(-900) False\n",
+      "sqrt(-50) True\n",
+      "sqrt(-78602) True\n",
+      "sqrt(-410) True\n",
+      "sqrt(-9009) True\n",
+      "sqrt(2) False\n",
+      "sqrt(-900) True\n",
       "sqrt(-30) True\n",
       "sqrt(-2000) True\n",
-      "sin(-900) False\n",
-      "sqrt(-9009) True\n",
-      "sqrt(-300000) True\n",
-      "sqrt(2) False\n",
       "sqrt(-10) True\n",
-      "sqrt(-50) True\n",
-      "cos(10) False\n",
-      "sqrt(0) False\n",
-      "sqrt(-60) True\n",
-      "sqrt(-78602) True\n",
-      "sqrt(-900) True\n",
       "sqrt(-800) True\n"
      ]
     }
    ],
-   "source": [
-    "for inp in more_inputs:\n",
-    "    print(inp.tree, candidate.constraint.check(inp))"
-   ]
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
