--- a/doc/01_fandango-learner.ipynb
+++ b/doc/01_fandango-learner.ipynb
@@ -27,15 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "e59679fef6dfc19",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T13:00:40.415274Z",
-     "start_time": "2024-12-18T13:00:40.341694Z"
+     "end_time": "2025-06-02T12:00:17.378054Z",
+     "start_time": "2025-06-02T12:00:16.626813Z"
     }
    },
-   "outputs": [],
    "source": [
     "from fdlearn.interface.fandango import parse_contents\n",
     "\n",
@@ -52,7 +50,9 @@
     "\"\"\"\n",
     "\n",
     "grammar, _ = parse_contents(grammar)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -66,15 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "8f28dd8190730334",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T13:00:42.338419Z",
-     "start_time": "2024-12-18T13:00:42.334995Z"
+     "end_time": "2025-06-02T12:00:17.392448Z",
+     "start_time": "2025-06-02T12:00:17.389957Z"
     }
    },
-   "outputs": [],
    "source": [
     "initial_inputs = {\n",
     "    (\"sqrt(-900)\", True),  # This input causes a failure.\n",
@@ -84,7 +82,9 @@
     "    (\"sqrt(2)\", False),    # Works correctly.\n",
     "    (\"cos(10)\", False),    # Works correctly.\n",
     "}"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -96,15 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "c2c465ce2d0721ff",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T13:00:44.170148Z",
-     "start_time": "2024-12-18T13:00:44.116135Z"
+     "end_time": "2025-06-02T12:00:19.857573Z",
+     "start_time": "2025-06-02T12:00:19.827044Z"
     }
    },
-   "outputs": [],
    "source": [
     "from fdlearn.learner import FandangoInput\n",
     "\n",
@@ -112,7 +110,9 @@
     "  FandangoInput.from_str(grammar, inp, oracle)\n",
     "  for inp, oracle in initial_inputs\n",
     "}"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -128,15 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "2b754f60dc3f50f4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T13:00:48.538421Z",
-     "start_time": "2024-12-18T13:00:48.536346Z"
+     "end_time": "2025-06-02T12:00:20.825803Z",
+     "start_time": "2025-06-02T12:00:20.822081Z"
     }
    },
-   "outputs": [],
    "source": [
     "from fdlearn.learner import NonTerminal\n",
     "\n",
@@ -145,7 +143,9 @@
     "    NonTerminal(\"<maybeminus>\"),\n",
     "    NonTerminal(\"<function>\"),\n",
     "}"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -159,26 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "3243e2cd97506639",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T13:00:51.321632Z",
-     "start_time": "2024-12-18T13:00:51.132033Z"
+     "end_time": "2025-06-02T12:00:21.818359Z",
+     "start_time": "2025-06-02T12:00:21.776760Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "fandango-learner:INFO: Instantiated patterns: 18\n",
-      "fandango-learner:INFO: Filtered positive inputs for learning: 2\n",
-      "fandango-learner:INFO: Evaluating 116 candidates\n",
-      "fandango-learner:INFO: Found 6 valid conjunctions\n"
-     ]
-    }
-   ],
    "source": [
     "from fdlearn.learner import FandangoLearner\n",
     "\n",
@@ -188,7 +175,22 @@
     "    initial_inputs,\n",
     "    relevant_non_terminals=relevant_non_terminals\n",
     ")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "fandango-learner:INFO: Instantiated patterns: 22\n",
+      "fandango-learner:INFO: Filtered positive inputs for learning: 2\n",
+      "fandango-learner:INFO: Evaluating 147 candidates\n",
+      "fandango-learner:INFO: Calculating combinations for 26 candidates\n",
+      "fandango-learner:INFO: Found 48 valid conjunctions\n",
+      "fandango-learner:INFO: Learned 9 constraint(s) that meet(s) the criteria\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -202,27 +204,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "239640a7ada55ae1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T13:00:53.532014Z",
-     "start_time": "2024-12-18T13:00:53.528138Z"
+     "end_time": "2025-06-02T12:00:24.528766Z",
+     "start_time": "2025-06-02T12:00:24.523699Z"
     }
    },
+   "source": [
+    "for candidate in learner.get_best_candidates():\n",
+    "    print(candidate.constraint)"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(int(<number>) <= -10 and str(<function>) == 'sqrt')\n"
+      "(int(<number>) <= -10 and str(<function>) == 'sqrt')\n",
+      "((exists <elem> in <maybeminus>: '-' in <elem>) and str(<function>) == 'sqrt')\n",
+      "((exists <elem> in <function>: str(<elem>) == 'sqrt') and (exists <elem> in <maybeminus>: str(<elem>) == '-'))\n",
+      "((exists <elem> in <function>: str(<elem>) == 'sqrt') and (exists <elem> in <maybeminus>: '-' in <elem>))\n",
+      "((exists <elem> in <function>: 'sqrt' in <elem>) and (exists <elem> in <maybeminus>: '-' in <elem>))\n",
+      "((exists <elem> in <function>: str(<elem>) == 'sqrt') and int(<number>) <= -10)\n",
+      "((exists <elem> in <maybeminus>: str(<elem>) == '-') and str(<function>) == 'sqrt')\n",
+      "((exists <elem> in <function>: 'sqrt' in <elem>) and (exists <elem> in <maybeminus>: str(<elem>) == '-'))\n",
+      "((exists <elem> in <function>: 'sqrt' in <elem>) and int(<number>) <= -10)\n"
      ]
     }
    ],
-   "source": [
-    "for candidate in learner.get_best_candidates():\n",
-    "    print(candidate.constraint)"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
